Fixed attrib covering trigger bug

--- a/src/public/styles/index.css
+++ b/src/public/styles/index.css
@@ -48,6 +48,7 @@
   width: 100%;
   height: auto;
   top: 10.5vh;
+  z-index: -1;
 }
 #toolbar .attrib a {
   text-decoration: none;
